--- a/services/grpc-auth-server.yaml
+++ b/services/grpc-auth-server.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: user
+  name: auth
 spec:
   selector:
-    app: grpc-user-server
+    app: grpc-auth-server
   ports:
     - port: 50052
       targetPort: 50052
